--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
-    "@awesome-cordova-plugins/in-app-browser": "^5.41.0",
     "@capacitor/android": "3.5.1",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.5.1",
@@ -27,9 +26,8 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "3.5.1",
     "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
+    "@ionic-enterprise/inappbrowser": "5.0.0",
     "@ionic/angular": "^6.0.0",
-    "cordova-plugin-inappbrowser": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
